--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/chip": "^2.0.26",
+    "@nextui-org/table": "^2.0.29",
+    "axios": "^1.6.8",
     "json-web-token": "^3.2.0",
-    "next": "14.2.1",
+    "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
