--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "json-web-token": "^3.2.0",
     "next": "^14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-papaparse": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
