--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-papaparse": "^4.4.0"
+    "react-papaparse": "^4.4.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/node": "^20",
